--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
         android:layout_height="fill_parent" >
 
         <!-- todo:放mapview -->
+        
+      <com.esri.android.map.MapView
+		android:id="@+id/map" android:layout_width="fill_parent"
+		android:layout_height="fill_parent">	
+	</com.esri.android.map.MapView>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -132,5 +137,13 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+    
+    <ImageView 
+		android:id="@+id/poiAnim"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:src="@drawable/ballon2" 
+		/>
 
 </RelativeLayout>
