--- a/res/layout/childs.xml
+++ b/res/layout/childs.xml
@@ -7,7 +7,8 @@
        android:id="@+id/mytextview_childs"  
        android:layout_width="500dip"  
        android:layout_height="60dp"  
-       android:paddingLeft="10dp"  
+       android:paddingLeft="10dp"
+       android:textColor="#000000"  
        android:gravity="center_vertical"  
        />  
     
