--- a/res/layout/groups.xml
+++ b/res/layout/groups.xml
@@ -8,6 +8,7 @@
         android:layout_width="fill_parent"  
        android:layout_height="60dp"  
       android:paddingLeft="40dp"  
+      android:textColor="#000000"
       android:gravity="center_vertical"  
       />  
     
