--- a/res/layout/item_menu.xml
+++ b/res/layout/item_menu.xml
@@ -7,6 +7,9 @@
     <TextView
         android:id="@+id/menu_item_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textColor="#000000"
+        android:textSize="20sp" />
     
 </LinearLayout>
