--- a/res/layout/select_layout.xml
+++ b/res/layout/select_layout.xml
@@ -2,39 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="2"
     android:orientation="horizontal" >
-    
-  <LinearLayout
-       android:layout_width="500dip"
-       android:layout_height="match_parent"
-       android:orientation="vertical"
-       android:id="@+id/leftLayout"
-       android:background="@android:color/holo_red_light"
-      >  
-   <TextView
-       android:id="@+id/titleName"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:textSize="35sp"
-       /> 
-   <ExpandableListView
-        android:layout_width="wrap_content"
-        android:layout_height="800dip"
-        android:id="@+id/expanList"
-      
-      />      
-      
-</LinearLayout>
-  
-  <ListView
-      android:id="@+id/listView"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_weight="1"
-      />
-  
-  
-  
-  
+
+    <LinearLayout
+        android:id="@+id/leftLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:background="#f7f5f5"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/titleName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="35sp" />
+
+        <ExpandableListView
+            android:id="@+id/expanList"
+            android:layout_width="wrap_content"
+            android:layout_height="800dip" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#f3f1f1"
+        android:layout_weight="1" />
+
 </LinearLayout>
