--- a/res/layout/view_menu.xml
+++ b/res/layout/view_menu.xml
@@ -13,18 +13,20 @@
 
         <TextView
             android:id="@+id/menu_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
         <ListView
             android:id="@+id/menu_listview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" 
+            android:cacheColorHint="#00000000"
+            android:background="#f7f5f5"/>
     </LinearLayout>
 
     <Button
         android:id="@+id/menu_view_btn"
-        style="@style/btn_menubar_btn"
-        android:text="@string/btn_tool" />
+        style="@style/menuview_btn" />
 
 </LinearLayout>
