--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <resources> 
-    <declare-styleable name="MenuView"> 
+    <declare-styleable name="MenuViewTool"> 
         <attr name="titleName" format="string"/> 
     </declare-styleable> 
 </resources>
