--- a/res/layout/view_menu_popwindow.xml
+++ b/res/layout/view_menu_popwindow.xml
@@ -1,13 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/menu_content"
         android:layout_width="fill_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="invisible" >
 
@@ -29,6 +29,6 @@
         android:id="@+id/menu_view_btn"
         style="@style/btn_menuview_btn"
         android:paddingTop="4dp"
-        android:drawableLeft="@drawable/zl" />
+        android:drawableTop="@drawable/zl" />
 
 </LinearLayout>
