--- a/res/layout/calloutwindow.xml
+++ b/res/layout/calloutwindow.xml
@@ -5,8 +5,8 @@
    titleTextSize = "10"
    titleTextStyle = "0"
    titleTextTypeFace = "0"
-   backgroundColor="#ffffff"
-   backgroundAlpha="180"
+   backgroundColor="#00000000"
+   backgroundAlpha="1"
    frameColor="#E2E4E5"
    flat="true"
    anchor="5"
