--- a/res/layout/groups.xml
+++ b/res/layout/groups.xml
@@ -8,9 +8,15 @@
         android:layout_width="fill_parent"  
        android:layout_height="60dp"  
       android:paddingLeft="40dp"  
-      android:textColor="#000000"
+       android:textColor="@android:color/background_dark"
       android:gravity="center_vertical"  
       />  
+      
+      <ImageView
+          android:layout_width="fill_parent"
+          android:layout_height="2dip"
+          android:src="@android:color/darker_gray"
+          />
     
 
 </LinearLayout>
