--- a/res/layout/paopao.xml
+++ b/res/layout/paopao.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="400dip"
-    android:layout_height="500dip"     
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"     
     android:id="@+id/paopao"    
     android:orientation="vertical"
     >
-	<Button  
-	   	android:layout_height="50dip"
-	   	android:layout_width="400dip"
-	   	android:textColor="#000000"	   		   		   	
-	   	android:lines="2"
-	   	android:layout_marginRight="3dip"	   	
-	   	android:id="@+id/property"
-	   	android:text="属性"
-	/>
-	<Button  
-	   	android:layout_height="50dip"
-	   	android:layout_width="400dip"
-	   	android:textColor="#000000"	   		   		   	
-	   	android:lines="2"
-	   	android:layout_marginRight="3dip"	   	
-	   	android:id="@+id/statistics"
-	   	android:text="统计"
-	/>
+ <Button
+	    android:id="@+id/property"
+	    android:layout_width="70dip"
+	    android:layout_height="70dip"
+	    android:layout_centerHorizontal="true"
+	    android:background="@drawable/circle"
+	    android:gravity="center_horizontal"
+	    android:paddingTop="30dip"
+	    android:text="属性"
+	    android:textSize="15sp" />
+
+	<Button
+	    android:id="@+id/statistics"
+	    android:layout_width="70dip"
+	    android:layout_height="70dip"
+	    android:background="@drawable/circle"
+	    android:gravity="center_horizontal"
+	    android:layout_below="@id/property"
+	    android:paddingTop="30dip"
+	    android:layout_marginTop="10dip"
+	    android:text="统计"
+	    android:textSize="15sp" />
+  <Button
+	    android:id="@+id/doc"
+	    android:layout_width="70dip"
+	    android:layout_height="70dip"
+	    android:background="@drawable/circle"
+	    android:gravity="center_horizontal"
+	    android:paddingTop="30dip"
+	    android:layout_marginTop="10dip"
+	    android:layout_marginLeft="10dip"
+	    android:layout_below="@id/property"
+	    android:text="文档"
+	    android:layout_toRightOf="@id/statistics"
+	    android:textSize="15sp" />
 	
-	<Button  
-	   	android:layout_height="50dip"
-	   	android:layout_width="400dip"
-	   	android:textColor="#000000"	   		   		   	
-	   	android:lines="2"
-	   	android:layout_marginRight="3dip"	   	
-	   	android:id="@+id/doc"
-	   	android:text="文档"
-	/>
 	
-	
-</LinearLayout>
+</RelativeLayout>
