--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,86 +19,118 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
 
-                <!-- 搜索框和图层按钮 -->
+            <!-- 搜索框和图层按钮 -->
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="5dp" >
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingLeft="5dp" >
+                    android:background="@drawable/toolbar_bg"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal" >
 
-                    <LinearLayout
-                        android:layout_width="fill_parent"
+                    <EditText
+                        android:id="@+id/edittext_search"
+                        android:layout_width="1200dp"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/toolbar_bg"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal" >
+                        android:background="@drawable/searchbtn"
+                        android:hint="搜索地图"
+                        android:textSize="30sp" />
 
-                        <EditText
-                            android:id="@+id/edittext_search"
-                            android:layout_width="1200dp"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/searchbtn"
-                            android:hint="搜索地图"
-                            android:textSize="30sp" />
+                    <Button
+                        android:id="@+id/btn_search_confirm"
+                        style="@style/btn_toolbar_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/btn_confirm" />
+                </LinearLayout>
 
-                        <Button
-                            android:id="@+id/btn_search_confirm"
-                            style="@style/btn_toolbar_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="1dp"
-                            android:text="@string/btn_confirm" />
-                    </LinearLayout>
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp" >
 
                     <Button
                         android:id="@+id/btn_map_layout"
                         style="@style/btn_toolbar_btn"
-                        android:layout_marginTop="5dp"
+                        android:layout_alignParentRight="true"
                         android:text="@string/btn_layout" />
-                </LinearLayout>
-                <!-- 左边工具栏 -->
+                </RelativeLayout>
+            </LinearLayout>
+            <!-- 左边工具栏 -->
 
-                <LinearLayout
-                    android:id="@+id/tool_bar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:orientation="vertical"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="5dp" >
+            <LinearLayout
+                android:id="@+id/tool_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical"
+                android:paddingLeft="5dp" >
 
-                    <Button
-                        android:id="@+id/tb_single"
-                        style="@style/btn_toolbar_btn"
-                        android:text="@string/btn_single" />
+                <Button
+                    android:id="@+id/tb_single"
+                    style="@style/btn_toolbar_btn"
+                    android:drawableTop="@drawable/toolbar_single"
+                    android:text="@string/btn_single" />
 
-                    <Button
-                        android:id="@+id/tb_multiple"
-                        style="@style/btn_toolbar_btn"
-                        android:text="@string/btn_mutiple" />
+                <Button
+                    android:id="@+id/tb_multiple"
+                    style="@style/btn_toolbar_btn"
+                    android:drawableTop="@drawable/toolbar_mutiple"
+                    android:text="@string/btn_mutiple" />
 
-                    <Button
-                        android:id="@+id/tb_frame"
-                        style="@style/btn_toolbar_btn"
-                        android:text="@string/btn_frame" />
+                <Button
+                    android:id="@+id/tb_frame"
+                    style="@style/btn_toolbar_btn"
+                    android:drawableTop="@drawable/toolbar_frame"
+                    android:text="@string/btn_frame" />
 
-                    <Button
-                        android:id="@+id/tb_polygon"
-                        style="@style/btn_toolbar_btn"
-                        android:text="@string/btn_polygon" />
+                <Button
+                    android:id="@+id/tb_polygon"
+                    style="@style/btn_toolbar_btn"
+                    android:drawableTop="@drawable/toolbar_polygon"
+                    android:text="@string/btn_polygon" />
 
-                    <Button
-                        android:id="@+id/tb_line"
-                        style="@style/btn_toolbar_btn"
-                        android:text="@string/btn_line" />
+                <Button
+                    android:id="@+id/tb_line"
+                    style="@style/btn_toolbar_btn"
+                    android:drawableTop="@drawable/toolbar_line"
+                    android:text="@string/btn_line" />
 
-                    <Button
-                        android:id="@+id/tb_cur_screen"
-                        style="@style/btn_toolbar_btn"
-                        android:text="@string/btn_cur_screen" />
-                </LinearLayout>
+                <Button
+                    android:id="@+id/tb_cur_screen"
+                    style="@style/btn_toolbar_btn"
+                    android:drawableTop="@drawable/toolbar_screen"
+                    android:text="@string/btn_cur_screen" />
+            </LinearLayout>
+            <!-- 放大，缩小 -->
+
+            <LinearLayout
+                android:id="@+id/menu_bar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/sxBtn"
+                    android:layout_width="66dp"
+                    android:layout_height="43dp"
+                    android:background="@drawable/btn_in" />
+
+                <ImageView
+                    android:id="@+id/fdBtn"
+                    android:layout_width="66dp"
+                    android:layout_height="43dp"
+                    android:background="@drawable/btn_zoom" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/menu_bar"
@@ -127,28 +159,32 @@
                           <Button
                     android:id="@+id/menu_tool"
                     style="@style/btn_menubar_btn"
-                    android:text="@string/btn_tool" /> -->
+                    android:text="@string/btn_tool" />
+                -->
 
 
                 <!--
                      <Button
                     android:id="@+id/menu_count"
                     style="@style/btn_menubar_btn"
-                    android:text="@string/btn_count" /> -->
+                    android:text="@string/btn_count" />
+                -->
 
 
                 <!--
                      <Button
                     android:id="@+id/menu_compare"
                     style="@style/btn_menubar_btn"
-                    android:text="@string/btn_compare" />  -->
+                    android:text="@string/btn_compare" />
+                -->
 
 
                 <!--
                      <Button
                     android:id="@+id/menu_mine"
                     style="@style/btn_menubar_btn"
-                    android:text="@string/btn_mine" />  -->
+                    android:text="@string/btn_mine" />
+                -->
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
