--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -40,13 +40,13 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/searchbtn"
                         android:hint="搜索地图"
-                        android:textSize="30sp" />
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/btn_search_confirm"
-                        style="@style/btn_toolbar_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/btn_search_confirm"
+                        android:background="@drawable/selector_btn_toolbar"
+                        android:layout_marginLeft="2dp"
                         android:text="@string/btn_confirm" />
                 </LinearLayout>
 
@@ -59,6 +59,8 @@
                         android:id="@+id/btn_map_layout"
                         style="@style/btn_toolbar_btn"
                         android:layout_alignParentRight="true"
+                        android:layout_marginRight="5dp"
+                        android:drawableTop="@drawable/toolbar_single"
                         android:text="@string/btn_layout" />
                 </RelativeLayout>
             </LinearLayout>
@@ -110,27 +112,34 @@
                     android:drawableTop="@drawable/toolbar_screen"
                     android:text="@string/btn_cur_screen" />
             </LinearLayout>
+
             <!-- 放大，缩小 -->
 
-            <LinearLayout
-                android:id="@+id/menu_bar"
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal" >
+                android:layout_below="@id/tool_bar"
+                android:layout_marginTop="75dp" >
 
-                <ImageView
-                    android:id="@+id/sxBtn"
-                    android:layout_width="66dp"
-                    android:layout_height="43dp"
-                    android:background="@drawable/btn_in" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:orientation="horizontal" >
 
-                <ImageView
-                    android:id="@+id/fdBtn"
-                    android:layout_width="66dp"
-                    android:layout_height="43dp"
-                    android:background="@drawable/btn_zoom" />
-            </LinearLayout>
+                    <ImageView
+                        android:id="@+id/sxBtn"
+                        android:layout_width="66dp"
+                        android:layout_height="43dp"
+                        android:background="@drawable/btn_in" />
+
+                    <ImageView
+                        android:id="@+id/fdBtn"
+                        android:layout_width="66dp"
+                        android:layout_height="43dp"
+                        android:background="@drawable/btn_zoom" />
+                </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/menu_bar"
@@ -155,36 +164,6 @@
                 <com.sinopec.view.MenuViewMine
                     android:id="@+id/menuview_mine"
                     style="@style/menubar_menuview" />
-                <!--
-                          <Button
-                    android:id="@+id/menu_tool"
-                    style="@style/btn_menubar_btn"
-                    android:text="@string/btn_tool" />
-                -->
-
-
-                <!--
-                     <Button
-                    android:id="@+id/menu_count"
-                    style="@style/btn_menubar_btn"
-                    android:text="@string/btn_count" />
-                -->
-
-
-                <!--
-                     <Button
-                    android:id="@+id/menu_compare"
-                    style="@style/btn_menubar_btn"
-                    android:text="@string/btn_compare" />
-                -->
-
-
-                <!--
-                     <Button
-                    android:id="@+id/menu_mine"
-                    style="@style/btn_menubar_btn"
-                    android:text="@string/btn_mine" />
-                -->
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
