--- a/res/layout/item_menu.xml
+++ b/res/layout/item_menu.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:singleLine="true"
+        android:paddingLeft="2dp"
         android:textColor="#000000"
-        android:textSize="20sp" />
+        android:textSize="17sp" />
     
 </LinearLayout>
