--- a/res/layout/view_menu_popwindow.xml
+++ b/res/layout/view_menu_popwindow.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/menu_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
     <LinearLayout
         android:id="@+id/menu_content"
         android:layout_width="fill_parent"
@@ -11,24 +17,16 @@
         android:orientation="vertical"
         android:visibility="invisible" >
 
-        <TextView
-            android:id="@+id/menu_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+        <com.sinopec.view.MenuViewTool
+            android:id="@+id/pop_menuview"
+            style="@style/menubar_menuview" />
 
         <ListView
             android:id="@+id/menu_listview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:cacheColorHint="#00000000"
-            android:background="#f7f5f5"/>
+            android:layout_height="wrap_content"
+            android:background="#f7f5f5"
+            android:cacheColorHint="#00000000" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/menu_view_btn"
-        style="@style/btn_menuview_btn"
-        android:paddingTop="4dp"
-        android:drawableTop="@drawable/zl" />
 
 </LinearLayout>
