--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,12 +17,22 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <style name="btn_toolbar_btn">
-         <item name="android:layout_width">120dp</item> 
+         <item name="android:layout_width">50dp</item> 
+         <item name="android:layout_height">50dp</item> 
+         <item name="android:gravity">center</item> 
+         <item name="android:layout_marginTop">8dp</item> 
+         <item name="android:background">@drawable/btn_alpha</item> 
+         <item name="android:layout_weight">1</item> 
+         <item name="android:textSize">12sp</item> 
+         <item name="android:textColor">@color/black</item> 
+    </style>
+    <style name="btn_search_confirm">
+         <item name="android:layout_width">wrap_content</item> 
          <item name="android:layout_height">wrap_content</item> 
          <item name="android:gravity">center</item> 
-         <item name="android:background">@drawable/selector_btn_toolbar</item> 
-         <item name="android:layout_weight">1</item> 
-         <item name="android:textSize">25sp</item> 
+         <item name="android:background">@drawable/btn_alpha</item> 
+         <item name="android:textSize">12sp</item> 
+         <item name="android:textColor">@color/black</item> 
     </style>
     <style name="btn_menubar_btn">
          <item name="android:layout_width">wrap_content</item> 
@@ -50,8 +60,9 @@
          <item name="android:layout_width">fill_parent</item> 
          <item name="android:layout_height">wrap_content</item> 
          <item name="android:gravity">center</item> 
+         <item name="android:textColor">@color/black</item> 
          <item name="android:background">@drawable/selector_btn_toolbar</item> 
-         <item name="android:textSize">30sp</item> 
+         <item name="android:textSize">20sp</item> 
     </style>
     <style name="layer_btn">
          <item name="android:layout_width">wrap_content</item> 
