--- a/res/layout/layout_layer.xml
+++ b/res/layout/layout_layer.xml
@@ -2,40 +2,70 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical" >
 
     <TextView
+        style="@style/text_size"
         android:layout_width="600dip"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        style="@style/text_size"
+        android:layout_gravity="center_horizontal"
         android:text="图层设置" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
         android:layout_marginTop="10dip"
-        android:gravity="center_vertical" >
+        android:gravity="center_vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" >
 
         <Button
-             android:id="@+id/id_btn_layer_1"
+            android:id="@+id/id_btn_layer_1"
             style="@style/layer_btn"
             android:layout_alignParentLeft="true"
+            android:background="@drawable/xml_selector_btn_layer1" />
+
+        <TextView
+            style="@style/text_low_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/id_btn_layer_1"
+            android:layout_alignRight="@id/id_btn_layer_1"
+            android:layout_below="@id/id_btn_layer_1"
+            android:gravity="center"
             android:text="卫星图" />
 
         <Button
             android:id="@+id/id_btn_layer_2"
             style="@style/layer_btn"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/xml_selector_btn_layer2" />
+
+        <TextView
+            style="@style/text_low_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/id_btn_layer_2"
+            android:layout_alignRight="@id/id_btn_layer_2"
+            android:layout_below="@id/id_btn_layer_2"
+            android:gravity="center"
             android:text="基础地理" />
 
         <Button
             android:id="@+id/id_btn_layer_3"
             style="@style/layer_btn"
             android:layout_alignParentRight="true"
+            android:background="@drawable/xml_selector_btn_layer3" />
+
+        <TextView
+            style="@style/text_low_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/id_btn_layer_3"
+            android:layout_alignRight="@id/id_btn_layer_3"
+            android:layout_below="@id/id_btn_layer_3"
+            android:gravity="center"
             android:text="油气专题" />
     </RelativeLayout>
 
@@ -57,8 +87,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dip"
         android:layout_marginBottom="5dip"
+        android:layout_marginTop="50dip"
         android:paddingLeft="15dp"
         android:paddingRight="15dp" >
 
@@ -68,7 +98,8 @@
             android:layout_alignParentLeft="true"
             android:text="确定" />
 
-        <Button android:id="@+id/id_btn_operator_2"
+        <Button
+            android:id="@+id/id_btn_operator_2"
             style="@style/layer_btn_ok_cancel"
             android:layout_alignParentRight="true"
             android:text="取消" />
