--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:iconbutton="http://schemas.android.com/apk/res/com.sinopec.activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -17,15 +18,16 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
+            android:layout_height="fill_parent"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" >
 
             <!-- 搜索框和图层按钮 -->
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="5dp" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -45,8 +47,8 @@
                     <Button
                         android:id="@+id/btn_search_confirm"
                         style="@style/btn_search_confirm"
-                        android:background="@drawable/selector_btn_toolbar"
                         android:layout_marginLeft="2dp"
+                        android:background="@drawable/selector_btn_toolbar"
                         android:text="@string/btn_confirm" />
                 </LinearLayout>
 
@@ -73,8 +75,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
-                android:orientation="vertical"
-                android:paddingLeft="5dp" >
+                android:orientation="vertical" >
 
                 <Button
                     android:id="@+id/tb_single"
@@ -119,7 +120,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tool_bar"
-                android:layout_marginTop="75dp" >
+                android:layout_marginTop="95dp" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -146,24 +147,41 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:background="@drawable/toolbottom_bg" 
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal" >
 
-                <com.sinopec.view.MenuViewTool
+                <com.sinopec.view.MenuButton
                     android:id="@+id/menuview_tool"
-                    style="@style/menubar_menuview" />
+                    style="@style/btn_menuview_btn"
+                    iconbutton:icon="@drawable/zl"
+                    iconbutton:relation="icon_right"
+                    iconbutton:mtext="@string/btn_tool"
+                    iconbutton:text_size="16sp" />
 
-                <com.sinopec.view.MenuViewCount
+                <com.sinopec.view.MenuButton
                     android:id="@+id/menuview_count"
-                    style="@style/menubar_menuview" />
+                    style="@style/btn_menuview_btn"
+                    iconbutton:icon="@drawable/zl"
+                    iconbutton:relation="icon_right"
+                    iconbutton:mtext="@string/btn_count"
+                    iconbutton:text_size="16sp" />
 
-                <com.sinopec.view.MenuViewCompare
+                <com.sinopec.view.MenuButton
                     android:id="@+id/menuview_compare"
-                    style="@style/menubar_menuview" />
+                    style="@style/btn_menuview_btn"
+                    iconbutton:icon="@drawable/zl"
+                    iconbutton:relation="icon_right"
+                    iconbutton:mtext="@string/btn_compare"
+                    iconbutton:text_size="16sp" />
 
-                <com.sinopec.view.MenuViewMine
+                <com.sinopec.view.MenuButton
                     android:id="@+id/menuview_mine"
-                    style="@style/menubar_menuview" />
+                    style="@style/btn_menuview_btn"
+                    iconbutton:icon="@drawable/zl"
+                    iconbutton:relation="icon_null"
+                    iconbutton:mtext="@string/btn_mine"
+                    iconbutton:text_size="16sp" />
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
