--- a/res/layout/adapter_layer_list.xml
+++ b/res/layout/adapter_layer_list.xml
@@ -20,6 +20,7 @@
         android:id="@+id/id_btn_layer_operator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+       	android:background="@drawable/selector_btn_toolbar"
         android:layout_alignParentRight="true"
         android:text="设置为当前图层" />
 
