--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -68,12 +68,11 @@
          <item name="android:textColor">@color/black</item> 
     </style>
         <style name="btn_menuview_btn">
-         <item name="android:layout_width">fill_parent</item> 
+         <item name="android:layout_width">wrap_content</item> 
          <item name="android:layout_height">wrap_content</item> 
          <item name="android:gravity">center</item> 
          <item name="android:textColor">@color/black</item> 
          <item name="android:background">@drawable/selector_btn_toolbar</item> 
-         <item name="android:textSize">20sp</item> 
     </style>
      <style name="dialog_theme" parent="@android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
